k8s/manifest_new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-ingestor
  labels:
    app: data-ingestor
    version: v0.1.0
    env: dev
    team: synthema
    component: data-ingestor
  namespace: synthema-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-ingestor
  template:
    metadata:
      labels:
        app: data-ingestor
    spec:
      containers:
        - name: data-ingestor-container
          image: harbor.synthema.rid-intrasoft.eu/synthema/data-ingestor:DOCKER_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 82
          command: ["python", "main.py"]
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "1Gi"
      imagePullSecrets:
        - name: harbor-cred

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: data-ingestor
    component: data-ingestor
  name: data-ingestor-service
  namespace: synthema-dev
spec:
  type: ClusterIP
  selector:
    app: data-ingestor
  ports:
    - protocol: TCP
      port: 82

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    app: data-ingestor
    component: data-ingestor
  name: data-ingestor-ingress-rule
  namespace: synthema-dev
spec:
  ingressClassName: nginx
  rules:
    - host: data-ingestor.k8s.synthema.rid-intrasoft.eu
      http:
        paths:
          - backend:
              service:
                name: data-ingestor-service
                port:
                  number: 82
            path: /
            pathType: Prefix
  tls:
    - hosts:
         - data-ingestor.k8s.synthema.rid-intrasoft.eu
      secretName: data-ingestor.k8s.synthema.rid-intrasoft.eu-tls
